[tool.poetry]
name = "toolbox-python"
version = "0.1.0"
description = "Helper files/functions/classes for generic Python processes"
authors = ["Admin <toolbox-python@data-science-extensions.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4.0"
typeguard = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
blacken-docs = "^1.19.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
codespell = "^2.3.0"
pyupgrade = "^3.17.0"
pylint = "^3.3.1"
pycln = "^2.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.40"
mkdocstrings = "^0.26.1"
mkdocs-coverage = "^1.1.0"
mkdocs-autorefs = "^1.2.0"
livereload = "^2.7.0"
mike = "^2.1.3"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pytest-icdiff = "^0.9"
pytest-xdist = "^3.6.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
